--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-<head><title></title></head>
+<head><title>Coder In Training</title></head>
 <body></body>
 </html>
